<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="general_preferences"
    android:title="@string/settings">

    <PreferenceScreen
        android:fragment="com.tuespotsolutions.blacktube.settings.VideoAudioSettingsFragment"
        android:icon="?attr/audio"
        android:title="@string/settings_category_video_audio_title"/>

    <PreferenceScreen
        android:fragment="com.tuespotsolutions.blacktube.settings.DownloadSettingsFragment"
        android:icon="?attr/download"
        android:title="@string/settings_category_downloads_title"/>

    <PreferenceScreen
        android:fragment="com.tuespotsolutions.blacktube.settings.AppearanceSettingsFragment"
        android:icon="?attr/palette"
        android:title="@string/settings_category_appearance_title"/>

    <PreferenceScreen
        android:fragment="com.tuespotsolutions.blacktube.settings.HistorySettingsFragment"
        android:icon="?attr/history"
        android:title="@string/settings_category_history_title"/>

    <PreferenceScreen
        android:fragment="com.tuespotsolutions.blacktube.settings.ContentSettingsFragment"
        android:icon="?attr/language"
        android:title="@string/content"/>
</PreferenceScreen>
